--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -3,9 +3,9 @@
 name: Create and publish a Docker image
 
 on:
-  push:
-    branches: ['release']
-
+ pull_request:
+    branches:
+      - main
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
