--- a/.github/workflows/test_image.yml
+++ b/.github/workflows/test_image.yml
@@ -10,9 +10,9 @@ jobs:
     name: test build
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v2
-      uses: redhat-actions/buildah-build@v2
-      image: test-image
-      tags: v1 ${{ github.sha }}
-      containerfiles: |
-        ./Containerfile
+      - uses: actions/checkout@v2
+      - uses: redhat-actions/buildah-build@v2
+        image: test-image
+        tags: v1 ${{ github.sha }}
+        containerfiles: |
+          ./Containerfile
