fix test workflow 7

--- a/.github/workflows/test_image.yml
+++ b/.github/workflows/test_image.yml
@@ -16,4 +16,4 @@ jobs:
           image: test-image
           tags: v1 ${{ github.sha }}
           containerfiles: |
-            ./Containerfile
+            ./build.sh
