fix test workflow 8

--- a/.github/workflows/test_image.yml
+++ b/.github/workflows/test_image.yml
@@ -15,5 +15,6 @@ jobs:
         with:
           image: test-image
           tags: v1 ${{ github.sha }}
+          oci: true
           containerfiles: |
             ./build.sh
